[project]
name = "jupyter-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "dune-spice>=0.2.7",
    "ipython>=9.4.0",
    "jupyter-ai[all]>=2.31.5",
    "jupyter-copilot>=0.1.4",
    "jupyterlab>=4.4.4",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-execute-time>=3.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openbb>=4.1.3",
    "pandas>=2.3.0",
    "paradigm-absorb",
    "paradigm-garlic",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "python-pptx>=1.0.2",
    "rclone-python>=0.1.23",
    "rich>=14.0.0",
    "ruff>=0.12.3",
    "scipy>=1.16.0",
    "toolplot",
    "toolstr",
    "tooltime",
    "tuna>=0.5.11",
]

[tool.uv.sources]
tooltime = { path = "../tooltime", editable = true }
toolstr = { path = "../toolstr", editable = true }
toolplot = { path = "../toolplot", editable = true }
paradigm-absorb = { path = "../absorb", editable = true }
paradigm-garlic = { path = "../garlic", editable = true }

[tool.ruff.format]
quote-style = "single"
line-length = 80
indent-style = "space"
