[project]
name = "jupyter-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "base58>=2.1.1",
    "borsh-construct>=0.1.0",
    "duckdb>=1.3.2",
    "dune-spice>=0.2.7",
    "ipython>=9.4.0",
    "jupysql>=0.11.1",
    "jupysql-plugin>=0.4.5",
    "jupyter-ai[all]>=2.31.5",
    "jupyter-copilot>=0.1.4",
    "jupyterlab>=4.4.4",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-execute-time>=3.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openbb>=4.1.3",
    "pandas>=2.3.0",
    "paradigm-absorb",
    "paradigm-garlic",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "polars-evm>=0.2.6",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "rclone-python>=0.1.23",
    "rich>=14.0.0",
    "ruff>=0.12.3",
    "scipy>=1.16.0",
    "solana-state",
    "solana-queries",
    "solders>=0.26.0",
    "toolcache>=0.5.0",
    "toolplot",
    "toolstr",
    "tooltime",
    "tuna>=0.5.11",
    "tooltree",
    "kaleido>=1.1.0",
    "cryptotrees",
    "primarch",
    "pyperclip>=1.11.0",
    "mirkwood",
    "jupyter-collaboration==4.0.2",
    "jupyter-mcp-tools>=0.1.4",
    "datalayer-pycrdt==0.12.17",
    "playwright>=1.55.0",
]

[tool.uv.sources]
tooltime = { path = "../tooltime", editable = true }
toolstr = { path = "../toolstr", editable = true }
toolplot = { path = "../toolplot", editable = true }
paradigm-absorb = { path = "../absorb", editable = true }
paradigm-garlic = { path = "../garlic", editable = true }
solana-state = { path = "../solana_state", editable = true }
solana-queries = { path = "../solana_queries", editable = true }
tooltree = { path = "../tooltree", editable = true }
cryptotrees = { path = "../cryptotrees", editable = true }
primarch = { path = "../primarch", editable = true }
mirkwood = { path = "../mirkwood", editable = true }

[tool.ruff.format]
quote-style = "single"
line-length = 80
indent-style = "space"
